welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:2: error: Missing closing brace `}' assumed here
var couleurverte: Int=0
^SlugTracking:3: error: expected class or object definition
def isFacingTrail():Boolean = {
^